Fix displaying video and video captions on mobile; hide paragraph in video content on mobile screen

--- a/static/css/mainStyle.css
+++ b/static/css/mainStyle.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6 {
 header {
     margin-bottom: 0;
     padding-bottom: 0;
+    height: 80vh;
 }
 
 #myMainVideo {
@@ -33,8 +34,9 @@ header {
 }
 
 .video-content {
-    margin-top:10%;
-    margin-bottom: 15%;
+    margin-top:20vh;
+    margin-bottom: 25vh;
+    height: 50vh;
     width: 80%;
     margin-right: auto;
     margin-left: auto;
@@ -248,6 +250,14 @@ i.medium {
 @media (max-width : 350px) {
     .logo-caption {
         display: none;
+    }
+    .video-content p {
+        display: none;
+    }
+    .my-btn-class {
+        margin: 2px;
+        padding: 5px;
+        height: auto;
     }
 }
 
